<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_one_handle_collect"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/public_background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/one_key_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        app:navigationIcon="@mipmap/fanhui"
        app:title="@string/one_key_bind"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:titleTextAppearance="@style/toolbar_title_style"
        app:subtitleTextAppearance="@style/toolbar_subtitle_style"
        app:popupTheme="@style/toolbar_pop_theme"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/public_five"
        >

        <LinearLayout
            android:id="@+id/ll_one_key_a"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip"
            android:background="@drawable/login_button_bg"
            >
            <TextView
                android:id="@+id/tv_key_community"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/one_handle_community"
                android:textColor="@android:color/black"
                android:padding="3dip"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/et_key_community_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="选择电梯所在小区"
                android:textColorHint="@color/gray"
                android:padding="3dip"
                android:gravity="center"
                android:background="@drawable/editview_bg"
                android:drawableRight="@mipmap/sanjiaoxing"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_one_key_b"
            android:layout_below="@+id/ll_one_key_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip"
            android:background="@drawable/login_button_bg"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            >
            <TextView
                android:id="@+id/tv_key_binder"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/one_handle_name"
                android:textColor="@android:color/black"
                android:padding="3dip"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/et_key_binder_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="选择需绑定的总机"
                android:textColorHint="@color/gray"
                android:padding="3dip"
                android:gravity="center"
                android:background="@drawable/editview_bg"
                android:drawableRight="@mipmap/sanjiaoxing"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_one_key_c"
            android:layout_below="@+id/ll_one_key_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip"
            android:background="@drawable/login_button_bg"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            >
                <TextView
                    android:id="@+id/tv_one_key_elevator"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/one_key_elevator"
                    android:textColor="@android:color/black"
                    android:padding="3dip"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/tv_onekey_elevator_select"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textColor="@android:color/black"
                    android:background="@drawable/editview_bg"
                    android:drawableRight="@mipmap/sanjiaoxing"
                    android:hint="@string/one_key_elevator_select"
                    android:textColorHint="@color/gray"
                    android:padding="3dip"
                    android:textSize="16sp"
                    android:gravity="center"
                    />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_one_key_d"
            android:layout_below="@+id/ll_one_key_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip"
            android:background="@drawable/login_button_bg"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            >
            <TextView
                android:id="@+id/tv_onekey_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/one_key_name_select"
                android:textColor="@android:color/black"
                android:padding="3dip"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/et_onekey_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@android:color/black"
                android:background="@drawable/editview_bg"
                android:padding="3dip"
                android:textSize="16sp"
                android:hint="@string/one_key_name_hint"
                android:gravity="center"
                android:textColorHint="@color/gray"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_one_key_e"
            android:layout_below="@+id/ll_one_key_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip"
            android:background="@drawable/login_button_bg"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            >
            <TextView
                android:id="@+id/tv_onekey_number"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/one_key_number"
                android:textColor="@android:color/black"
                android:padding="3dip"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/et_onekey_number"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@android:color/black"
                android:background="@drawable/editview_bg"
                android:padding="3dip"
                android:textSize="16sp"
                android:hint="@string/one_key_number_select"
                android:gravity="center"
                android:digits="1234567890."
                android:textColorHint="@color/gray"
                />

        </LinearLayout>
        <RelativeLayout
            android:id="@+id/rl_one_handle_f"
            android:layout_below="@+id/ll_one_key_e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            >
            <Button
                android:id="@+id/one_key_sim_btn"
                android:layout_width="80dip"
                android:layout_height="30dip"
                android:background="@drawable/caiji_bg"
                android:layout_alignParentRight="true"
                android:text="采集"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/common_white"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_one_key_f"
            android:layout_below="@+id/rl_one_handle_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip"
            android:background="@drawable/login_button_bg"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            >
            <TextView
                android:id="@+id/tv_one_key_id"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/one_key_id"
                android:textColor="@android:color/black"
                android:padding="3dip"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tv_onekey_id_show"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@android:color/black"
                android:background="@drawable/editview_bg"
                android:hint="@string/one_key_id_show"
                android:textColorHint="@color/gray"
                android:padding="3dip"
                android:textSize="16sp"
                android:gravity="center"
                />

        </LinearLayout>

        <Button
            android:id="@+id/one_key_commit_btn"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:text="提交"
            android:padding="@dimen/slidingmenu_btn_padding"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_button_bg"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dip"
            />
    </RelativeLayout>
</LinearLayout>