<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/common_white"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/login_bg"
        android:orientation="vertical"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <onerfid.com.oneptt.widget.ClearEditText
            android:id="@+id/cet_login_name"
            android:layout_width="250dip"
            android:layout_height="50dip"
            android:layout_marginTop="100dip"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@mipmap/zhanghao"
            android:hint="@string/login_name"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/gray"
            android:gravity="center_vertical"
            android:drawablePadding="20dip"
            android:padding="5dip"
            android:background="@drawable/editview_bg"
            />

        <onerfid.com.oneptt.widget.ClearEditText
            android:id="@+id/cet_login_pwd"
            android:layout_below="@+id/cet_login_name"
            android:layout_width="250dip"
            android:layout_height="50dip"
            android:layout_marginTop="20dip"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@mipmap/mima"
            android:hint="@string/login_pwd"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/gray"
            android:gravity="center_vertical"
            android:drawablePadding="20dip"
            android:padding="5dip"
            android:background="@drawable/editview_bg"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/login_btn"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/common_white"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dip"
            android:background="@drawable/login_button_bg"
            />
    </RelativeLayout>

</LinearLayout>