<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6EBEE"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        app:navigationIcon="@mipmap/fanhui"
        app:title="@string/app_name"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:titleTextAppearance="@style/toolbar_title_style"
        app:subtitleTextAppearance="@style/toolbar_subtitle_style"
        app:popupTheme="@style/toolbar_pop_theme"
        >
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scaleType="fitXY"
        android:src="@mipmap/expert_bg"/>

    <LinearLayout
        android:id="@+id/one_handle_collect_ll"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_marginLeft="20dip"
            android:src="@mipmap/my_case"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/one_handle_bind"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:src="@mipmap/right_twinkle"
            android:layout_gravity="right"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/one_key_collect_ll"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_marginLeft="20dip"
            android:src="@mipmap/onekey_install"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/one_key_bind"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:src="@mipmap/right_twinkle"
            android:layout_gravity="right"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/one_key_set_ll"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_marginLeft="20dip"
            android:src="@mipmap/yingjijiuyuan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/holo_blue_dark"
            android:gravity="center_horizontal"
            android:text="@string/one_key_set"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:src="@mipmap/right_twinkle"
            android:layout_gravity="right"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/one_key_set_child_ll"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_marginLeft="20dip"
            android:src="@mipmap/ele_parameter1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/holo_blue_dark"
            android:gravity="center_horizontal"
            android:text="@string/one_key_set_child"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:src="@mipmap/right_twinkle"
            android:layout_gravity="right"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/one_handle_change_ll"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_change"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_marginLeft="20dip"
            android:src="@mipmap/weibaoyewu"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/one_handle_change"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:src="@mipmap/right_twinkle"
            android:layout_gravity="right"
            />

    </LinearLayout>


 </LinearLayout>