<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_one_handle_change"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/public_background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/handle_change_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        app:navigationIcon="@mipmap/fanhui"
        app:title="@string/one_handle_change"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:titleTextAppearance="@style/toolbar_title_style"
        app:subtitleTextAppearance="@style/toolbar_subtitle_style"
        app:popupTheme="@style/toolbar_pop_theme"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/public_five"
        >

    <LinearLayout
        android:id="@+id/ll_handle_change_a"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip"
        android:background="@drawable/login_button_bg"
        >
        <TextView
            android:id="@+id/tv_handle_change_community"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/one_handle_community"
            android:textColor="@android:color/black"
            android:padding="3dip"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/et_change_community_name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="选择电梯所在小区"
            android:textColorHint="@color/gray"
            android:padding="3dip"
            android:gravity="center"
            android:background="@drawable/editview_bg"
            android:drawableRight="@mipmap/sanjiaoxing"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_handle_change_b"
        android:layout_below="@+id/ll_handle_change_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip"
        android:background="@drawable/login_button_bg"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:id="@+id/tv_change_binder"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/one_handle_name"
            android:textColor="@android:color/black"
            android:padding="3dip"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/et_change_binder_name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="选择需更换的总机"
            android:textColorHint="@color/gray"
            android:padding="3dip"
            android:gravity="center"
            android:background="@drawable/editview_bg"
            android:drawableRight="@mipmap/sanjiaoxing"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_handle_change_c"
            android:layout_below="@+id/ll_handle_change_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip"
            android:background="@drawable/login_button_bg"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            >
            <TextView
                android:id="@+id/tv_change_number"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/one_handle_number"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/et_change_number"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@android:color/black"
                android:background="@drawable/editview_bg"
                android:padding="3dip"
                android:textSize="16sp"
                android:hint="输入11位手机号码"
                android:gravity="center"
                android:digits="1234567890."
                android:textColorHint="@color/gray"
                />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_handle_change_a"
            android:layout_below="@+id/ll_handle_change_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            >
            <Button
                android:id="@+id/one_change_sim_btn"
                android:layout_width="80dip"
                android:layout_height="30dip"
                android:background="@drawable/caiji_bg"
                android:layout_alignParentRight="true"
                android:text="采集"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/common_white"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_handle_change_d"
            android:layout_below="@id/rl_handle_change_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/login_button_bg"
            android:padding="5dip"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            >
            <TextView
                android:id="@+id/tv_change_id"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/one_handle_id"
                android:textColor="@android:color/black"
                android:padding="3dip"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tv_change_id_select"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="点击采集按钮获取ID"
                android:textColor="@android:color/darker_gray"
                android:background="@drawable/editview_bg"
                android:padding="3dip"
                android:singleLine="true"
                android:textSize="16sp"
                android:inputType="numberDecimal"
                android:gravity="center"
                />
        </LinearLayout>

        <Button
            android:id="@+id/one_change_commit_btn"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:text="提交"
            android:padding="@dimen/slidingmenu_btn_padding"
            android:textSize="18dip"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_button_bg"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dip"
            />

        <onerfid.com.oneptt.widget.TimeButton
            android:id="@+id/one_change_commit_query"
            android:layout_above="@+id/one_change_commit_btn"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:padding="@dimen/slidingmenu_btn_padding"
            android:textSize="18dip"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_button_bg"
            android:layout_marginBottom="20dip"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tv_change_result"
            android:layout_above="@+id/one_change_commit_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:text="更新一键通25台，成功25，失败0"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/public_five"
            android:layout_marginBottom="@dimen/public_ten"
            android:gravity="center"
            android:visibility="gone"
            />

    </RelativeLayout>


</LinearLayout>